# WinLog-Analyzer

./: .gitignore  CHANGELOG-pl.md  CHANGELOG.md  README-pl.md  README.md  install.bat  main.py  pyproject.toml  start.bat
core/: ai_client.py  analysis_worker.py  comparator.py  exporter.py  history.py  i18n.py  log_filter.py  log_reader.py  paths.py
locales/: CONTRIBUTING.md  en.json  pl.json
providers/: anthropic.py  base.py  gemini.py  groq.py  openai.py
scripts/: png2ico.py
tests/: test_base.py  test_log_reader.py
ui/: ai_panel.py  compare_panel.py  history_dialog.py  log_table.py  main_window.py  settings_dialog.py  styles.qss
